Bug 286003 - Kmail crash while checking IMAP account
Summary: Kmail crash while checking IMAP account
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 242698 276376 282597 286393 290527 296325 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-07 14:18 UTC by Chris
Modified: 2012-03-31 13:56 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris 2011-11-07 14:18:53 UTC
Application: akonadi_imap_resource (4.7)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 2.6.37.6-0.7-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
Kmail crashed when checking all accounts.  All accounts are IMAP.  This IMAP account is connected to an MS Exchange hosted email server.

The crash can be reproduced every time.

-- Backtrace:
Application: Doxadv of type IMAP E-Mail Server (akonadi_imap_resource), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fdee9902760 (LWP 3185))]

Thread 3 (Thread 0x7fded3fff700 (LWP 3850)):
#0  0x00007fdee3d5707a in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#1  0x00007fdee3d57fa9 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fdee3d58650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fdee8dc1636 in QEventDispatcherGlib::processEvents (this=0x7f4fe0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fdee8d95c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fdee8d95e35 in QEventLoop::exec (this=0x7fded3ffee00, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fdee8caabe4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#7  0x00007fdee7a172e3 in ?? () from /usr/lib64/libkimap.so.4
#8  0x00007fdee8cad4d5 in QThreadPrivate::start (arg=0x80e210) at thread/qthread_unix.cpp:331
#9  0x00007fdee4cbea3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007fdee540266d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fded8e4a700 (LWP 10960)):
#0  0x00007fdee973b9c3 in dl_open_worker () from /lib64/ld-linux-x86-64.so.2
#1  0x00007fdee97375f6 in _dl_catch_error () from /lib64/ld-linux-x86-64.so.2
#2  0x00007fdee973b5da in _dl_open () from /lib64/ld-linux-x86-64.so.2
#3  0x00007fdee543a520 in do_dlopen () from /lib64/libc.so.6
#4  0x00007fdee97375f6 in _dl_catch_error () from /lib64/ld-linux-x86-64.so.2
#5  0x00007fdee543a5bf in dlerror_run () from /lib64/libc.so.6
#6  0x00007fdee543a627 in __libc_dlopen_mode () from /lib64/libc.so.6
#7  0x00007fdee54150b5 in init () from /lib64/libc.so.6
#8  0x00007fdee4cc4933 in pthread_once () from /lib64/libpthread.so.0
#9  0x00007fdee54151ac in backtrace () from /lib64/libc.so.6
#10 0x00007fdee539cde7 in __libc_message () from /lib64/libc.so.6
#11 0x00007fdee53a23b6 in malloc_printerr () from /lib64/libc.so.6
#12 0x00007fdee53a4b32 in _int_malloc () from /lib64/libc.so.6
#13 0x00007fdee53a6d99 in malloc () from /lib64/libc.so.6
#14 0x00007fdee54187bd in __vasprintf_chk () from /lib64/libc.so.6
#15 0x00007fdee3d9be3b in g_vasprintf () from /lib64/libglib-2.0.so.0
#16 0x00007fdee3d7b4be in g_string_append_vprintf () from /lib64/libglib-2.0.so.0
#17 0x00007fdee3d7b6d8 in g_string_append_printf () from /lib64/libglib-2.0.so.0
#18 0x00007fdee3d6008f in g_log_default_handler () from /lib64/libglib-2.0.so.0
#19 0x00007fdee3d60809 in g_logv () from /lib64/libglib-2.0.so.0
#20 0x00007fdee3d60bd3 in g_log () from /lib64/libglib-2.0.so.0
#21 0x00007fdee3d577af in g_main_context_check () from /lib64/libglib-2.0.so.0
#22 0x00007fdee3d58132 in ?? () from /lib64/libglib-2.0.so.0
#23 0x00007fdee3d58650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#24 0x00007fdee8dc15df in QEventDispatcherGlib::processEvents (this=0x90f330, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#25 0x00007fdee8d95c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#26 0x00007fdee8d95e35 in QEventLoop::exec (this=0x7fded8e49e00, flags=...) at kernel/qeventloop.cpp:201
#27 0x00007fdee8caabe4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#28 0x00007fdee7a172e3 in ?? () from /usr/lib64/libkimap.so.4
#29 0x00007fdee8cad4d5 in QThreadPrivate::start (arg=0x8cd240) at thread/qthread_unix.cpp:331
#30 0x00007fdee4cbea3f in start_thread () from /lib64/libpthread.so.0
#31 0x00007fdee540266d in clone () from /lib64/libc.so.6
#32 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fdee9902760 (LWP 3185)):
[KCrash Handler]
#6  0x00007fdee53b08e0 in _wordcopy_fwd_aligned () from /lib64/libc.so.6
#7  0x00007fdee53aefc2 in memmove () from /lib64/libc.so.6
#8  0x00007fdee8ccb87d in QListData::remove (this=0x7f5878, i=<value optimized out>) at /usr/include/bits/string3.h:58
#9  0x00007fdee8ccbb4b in QListData::erase (this=0x7f5878, xi=<value optimized out>) at tools/qlist.cpp:412
#10 0x00000000004536f9 in erase (this=0x7f5830, session=0x90fc90) at /usr/include/QtCore/qlist.h:453
#11 removeFirst (this=0x7f5830, session=0x90fc90) at /usr/include/QtCore/qlist.h:273
#12 takeFirst (this=0x7f5830, session=0x90fc90) at /usr/include/QtCore/qlist.h:477
#13 SessionPool::declareSessionReady (this=0x7f5830, session=0x90fc90) at /usr/src/debug/kdepim-runtime-4.7.3/resources/imap/sessionpool.cpp:207
#14 0x0000000000455163 in SessionPool::onLoginDone (this=0x7f5830, job=0x85d980) at /usr/src/debug/kdepim-runtime-4.7.3/resources/imap/sessionpool.cpp:348
#15 0x000000000045545f in SessionPool::qt_metacall (this=0x7f5830, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7fff511ecac0) at /usr/src/debug/kdepim-runtime-4.7.3/build/resources/imap/sessionpool.moc:118
#16 0x00007fdee8daae8f in QMetaObject::activate (sender=0x85d980, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff511ecac0) at kernel/qobject.cpp:3287
#17 0x00007fdee5cf0f72 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#18 0x00007fdee5cf0fb0 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#19 0x00007fdee7a2d47d in KIMAP::SessionPrivate::clearJobQueue() () from /usr/lib64/libkimap.so.4
#20 0x00007fdee7a33fad in KIMAP::Session::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkimap.so.4
#21 0x00007fdee8daa7aa in QObject::event (this=0x90fc90, e=<value optimized out>) at kernel/qobject.cpp:1226
#22 0x00007fdee8159264 in QApplicationPrivate::notify_helper (this=0x6a7380, receiver=0x90fc90, e=0x915e50) at kernel/qapplication.cpp:4481
#23 0x00007fdee816181a in QApplication::notify (this=<value optimized out>, receiver=0x90fc90, e=0x915e50) at kernel/qapplication.cpp:4360
#24 0x00007fdee62ceae6 in KApplication::notify (this=0x7fff511ed560, receiver=0x90fc90, event=0x915e50) at /usr/src/debug/kdelibs-4.7.3/kdeui/kernel/kapplication.cpp:311
#25 0x00007fdee8d967cc in QCoreApplication::notifyInternal (this=0x7fff511ed560, receiver=0x90fc90, event=0x915e50) at kernel/qcoreapplication.cpp:787
#26 0x00007fdee8d99fc5 in sendEvent (receiver=0x0, event_type=0, data=0x688470) at kernel/qcoreapplication.h:215
#27 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x688470) at kernel/qcoreapplication.cpp:1428
#28 0x00007fdee8dc1443 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#29 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#30 0x00007fdee3d57bd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#31 0x00007fdee3d583b0 in ?? () from /lib64/libglib-2.0.so.0
#32 0x00007fdee3d58650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#33 0x00007fdee8dc15df in QEventDispatcherGlib::processEvents (this=0x687c80, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#34 0x00007fdee81ff38e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00007fdee8d95c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#36 0x00007fdee8d95e35 in QEventLoop::exec (this=0x7fff511ed4d0, flags=...) at kernel/qeventloop.cpp:201
#37 0x00007fdee8d9a27b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#38 0x00007fdee93cd317 in Akonadi::ResourceBase::init (r=0x7ead50) at /usr/src/debug/kdepimlibs-4.7.3/akonadi/resourcebase.cpp:393
#39 0x0000000000419068 in init<ImapResource> (argc=<value optimized out>, argv=<value optimized out>) at /usr/include/akonadi/resourcebase.h:188
#40 main (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdepim-runtime-4.7.3/resources/imap/imapresource.cpp:598

Possible duplicates by query: bug 283789, bug 283764, bug 282598, bug 282076, bug 278756.

Reported using DrKonqi
Comment 1 Allen Winter 2011-11-09 21:29:31 UTC
probably fixed with commit a0ff5591f8b9791ee8ed051172a458ab7cfcc6db

still need to backport to 4.7
Comment 2 Allen Winter 2011-11-12 21:24:43 UTC
backported in d29eb0e0ea3feadd3467e1234669397ea4533282
Comment 3 Will Stephenson 2011-12-08 11:59:53 UTC
*** Bug 286393 has been marked as a duplicate of this bug. ***
Comment 4 David Faure 2012-01-05 11:28:15 UTC
*** Bug 242698 has been marked as a duplicate of this bug. ***
Comment 5 David Faure 2012-01-05 11:28:53 UTC
*** Bug 276376 has been marked as a duplicate of this bug. ***
Comment 6 David Faure 2012-01-05 11:30:03 UTC
*** Bug 282597 has been marked as a duplicate of this bug. ***
Comment 7 David Faure 2012-01-05 11:31:55 UTC
*** Bug 290527 has been marked as a duplicate of this bug. ***
Comment 8 Christophe Marin 2012-03-31 13:56:52 UTC
*** Bug 296325 has been marked as a duplicate of this bug. ***