check that m_pendingSessions is not empty before trying to takeFirst().

BUG: 286003
MERGE: 4.7